istio/virtualservice/app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: app-dev
spec:
  gateways:
    - app-dev/app-gateway
  hosts:
    - app.dev.local
  http:
    - match:
        - uri:
            prefix: /app01/
      route:
        - destination:
            host: >-
              app01-service.app-dev.svc.cluster.local
            port:
              number: 3000
          weight: 100
    - match:
        - uri:
            prefix: /app02/
      route:
        - destination:
            host: >-
              app02-service.app-dev.svc.cluster.local
            port:
              number: 3000
          weight: 100
    - match:
        - uri:
            prefix: /app03/
      route:
        - destination:
            host: >-
              app03-service.app-dev.svc.cluster.local
            port:
              number: 3000
          weight: 100
